--- a/TODO.txt
+++ b/TODO.txt
@@ -1,25 +1,24 @@
 Comprehensive List of Things We Want to Do:
 - UI
-    - (DONE) Make main window
+    - () Make Home window
     - (DONE) Add title to window
     - (DONE) Make side bar options
     - () Create prompts for the screens
     - () Create run buttons for each screen that dynamically run according to method
     - () Add logo in top left
-    - () Add Icons?
     - () help bar
+    - () Make credits
 
 - Execution
-    - (1/2) Login for first action that requires data from the website
+    - (DONE) Login 
     - (DONE) Initiate the chromedriver
     - () Upload desired schedule from website ("Plan Ahead" section on NEU)
         - () All we will have to do is translate into our version of a schedule so we can correct if needed
         - () send this version of the schedule to the create a schedule tab.
         - () all functions of the create a schedule part.
-    - () Create a list of dsired courses by CRN (/course name TBD) regardless of overlap in time.
-        - () description
-        - () Allow for reording and deleting. (preferrebly by drag and drop but idk)
-        - () verify given CRNs are real/available
+    - (DONE) Create a list of dsired courses by CRN (/course name TBD) regardless of overlap in time.
+        - (DONE-ish) description
+        - (DONE) Allow for reording and deleting. 
     - () Create a schedule on our app that resembles the online version
         - () allow reordering and deletion
         - () description
@@ -27,12 +26,9 @@ Comprehensive List of Things We Want to Do:
             - () priority by entire schedule
             - () priority by portion of schedule (first one that has 4 still available or whatever)
             - () no schedule is available, make most optimal? (alot of algo work but it might be possible)
-        - () verify given CRNs are real/available
-    - () Sign up for the classes
-        - () report back the classes that were signed up for
-        - () report back what was unavailable and why
-        - () show list of classes still available with the same name that they were unable to book and is within available time slots?
-        - () schedule for specific times
+    - (DONE) Sign up for the classes
+    - () schedule for specific times
+    - () Add the 'wait for time slot' feature by default.
         
 - Packaging
     - (In progress) README.md for description
